# robot_programming_project

./: README.md
exercise/: README.md  package.xml
ros_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros_ws/devel/include/my_package/: Num.h
ros_ws/devel/lib/my_package/: cmd_vel_pub  cmd_vel_sub  lidar_pub  lidar_sub  test_node
ros_ws/devel/lib/pkgconfig/: my_package.pc
ros_ws/devel/lib/python3/dist-packages/my_package/msg/: _Num.py
ros_ws/devel/share/common-lisp/ros/my_package/msg/: Num.lisp  _package.lisp  _package_Num.lisp  my_package-msg.asd
ros_ws/devel/share/gennodejs/ros/my_package/msg/: Num.js
ros_ws/devel/share/my_package/cmake/: my_package-msg-paths.cmake  my_packageConfig.cmake
ros_ws/devel/share/roseus/ros/my_package/: manifest.l
ros_ws/devel/share/roseus/ros/my_package/msg/: Num.l
ros_ws/src/my_package/: CMakeLists.txt  package.xml
ros_ws/src/my_package/include/: world.h
ros_ws/src/my_package/src/: robot.cpp
ros_ws/src/my_package/test_data/: cappero_1r.json
